feat: add configuration management with modern UI
- Add CRUD endpoints for configuration management
- Implement frontend with Element Plus
- Add stock market related configurations
- Improve JSON formatting for config values
- Update README with changelog